--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -1,5 +1,5 @@
 on: [push, pull_request]
-name: Lints on stable toolchain
+name: Lints on nightly toolchain
 jobs:
   clippy:
     runs-on: ubuntu-latest
@@ -8,7 +8,7 @@ jobs:
       CARGO_UNSTABLE_SPARSE_REGISTRY: true
     steps:
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@nightly
         with:
           components: clippy
 
