--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,31 +1,15 @@
 on: [push, pull_request]
-name: Build and run tests
+name: Tests
 jobs:
-  build_and_test:
-    strategy:
-      matrix:
-        rust:
-          - stable
-          - beta
-          - nightly
-          - 1.67.0  # MSRV
-      fail-fast: false
+  test:
     runs-on: ubuntu-latest
     env:
       RUSTFLAGS: "-D warnings"
       CARGO_UNSTABLE_SPARSE_REGISTRY: true
     steps:
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: ${{ matrix.rust }}
-
-      - name: Build without features
-        run: cargo build --release --no-default-features --verbose
+      - uses: dtolnay/rust-toolchain@nightly
       - name: Tests without features
         run: cargo test --release --no-default-features --verbose
-
-      - name: Build with default features
-        run: cargo build --release --verbose
       - name: Tests with default features
         run: cargo test --release --verbose
