--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
       - name: Run benchmarks
-        run: cargo bench --verbose --features benchmarks
+        run: cargo bench --verbose
   benchmark_native:
     runs-on: ubuntu-latest
     env:
@@ -20,4 +20,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
       - name: Run benchmarks (targeting the native CPU)
-        run: cargo bench --verbose --features benchmarks
+        run: cargo bench --verbose
