--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -22,6 +22,9 @@ jobs:
     strategy:
       matrix:
         file:
+          - equal_preference
+          - equal_preference_droop
+          - equal_preference_equalize
           - tie_break_explicit
           - tie_break_implicit
           - vegetables
