--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,5 +1,5 @@
 on: [push, pull_request]
-name: Formatting on stable toolchain
+name: Formatting on nightly toolchain
 jobs:
   format:
     runs-on: ubuntu-latest
@@ -7,9 +7,8 @@ jobs:
       CARGO_UNSTABLE_SPARSE_REGISTRY: true
     steps:
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@nightly
         with:
           components: rustfmt
-
       - name: Check formatting
         run: cargo fmt --verbose -- --check --verbose
