--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -52,3 +52,25 @@ jobs:
         run: |
           sed -i "s/Implementation: STV-rs/Droop package: droop v0.14/g" testdata/${{ matrix.file }}.fixed9.log
           python3 droop/Droop.py meek fixed precision=9 omega=6 defeat_batch=none testdata/${{ matrix.file }}.blt | diff testdata/${{ matrix.file }}.fixed9.log -
+  crash_fixes_tests:
+    needs: build
+    strategy:
+      matrix:
+        file:
+          - crashes/crash
+          - crashes/rand_geometric
+      fail-fast: false
+    runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: "-D warnings"
+      CARGO_UNSTABLE_SPARSE_REGISTRY: true
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+          path: target/release/
+      - name: Check STV-rs output
+        run: |
+          chmod +x target/release/stv-rs
+          target/release/stv-rs --arithmetic fixed9 --force-positive-surplus=true < testdata/${{ matrix.file }}.blt | diff testdata/${{ matrix.file }}.fixed9.log -
