--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "stv-rs"
 description = "Single Transferable Vote implementation in Rust"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Guillaume Endignoux <guillaumee@google.com>"]
 license = "Apache-2.0"
 repository = "https://github.com/gendx/stv-rs"
@@ -26,3 +26,6 @@ rand_distr = "0.4"
 [features]
 default = ["checked_i64"]
 checked_i64 = []
+
+[package.metadata.docs.rs]
+rustdoc-args = ["--document-private-items"]
