Add minimized example that crashes the counting.

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -72,6 +72,7 @@ jobs:
       matrix:
         file:
           - crashes/crash
+          - crashes/minimal
           - crashes/rand_geometric
         parallel:
           - false
