Add test where counting crashes by trying to elect too many candidates.

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -102,6 +102,7 @@ jobs:
       matrix:
         file:
           - crashes/crash
+          - crashes/elect_too_many
           - crashes/minimal
           - crashes/rand_geometric
       fail-fast: false
