Add a variant of crashes/minimal with 10x more ballots.
Droop.py rejects the other file because there are only 2 ballots for 3
candidates. However the effect should be the same.

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -71,6 +71,7 @@ jobs:
         file:
           - crashes/crash
           - crashes/minimal
+          - crashes/minimal10
           - crashes/rand_geometric
         parallel:
           - false
@@ -123,6 +124,7 @@ jobs:
           - crashes/crash
           - crashes/elect_too_many
           - crashes/minimal
+          - crashes/minimal10
           - crashes/rand_geometric
       fail-fast: false
     runs-on: ubuntu-latest
