--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -2,22 +2,35 @@ on: [push, pull_request]
 name: Benchmarks
 jobs:
   benchmark:
+    strategy:
+      matrix:
+        cpu:
+          - default
+          - native
+        include:
+          - cpu: default
+            flags: ""
+          - cpu: native
+            flags: "-C target-cpu=native"
+      fail-fast: false
     runs-on: ubuntu-latest
     env:
-      RUSTFLAGS: "-D warnings"
+      RUSTFLAGS: "-D warnings ${{ matrix.flags }}"
       CARGO_UNSTABLE_SPARSE_REGISTRY: true
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
+
+      - name: Create Cargo.lock file
+        run: cargo generate-lockfile
+      - name: Cache Cargo registry
+        uses: actions/cache@v3
+        with:
+          path: ~/.cargo/registry
+          key: cargo-registry-${{ hashFiles('Cargo.toml') }}-${{ hashFiles('Cargo.lock') }}
+          restore-keys: |
+            cargo-registry-${{ hashFiles('Cargo.toml') }}
+            cargo-registry
+
       - name: Run benchmarks
-        run: cargo bench --verbose
-  benchmark_native:
-    runs-on: ubuntu-latest
-    env:
-      RUSTFLAGS: "-C target-cpu=native -D warnings"
-      CARGO_UNSTABLE_SPARSE_REGISTRY: true
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@nightly
-      - name: Run benchmarks (targeting the native CPU)
         run: cargo bench --verbose
