Add GitHub Action cache for Cargo target/ directory.

--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -32,5 +32,16 @@ jobs:
             cargo-registry-${{ hashFiles('Cargo.toml') }}
             cargo-registry
 
+      - name: Check Cargo version
+        run: cargo -V > cargo.version.txt
+      - name: Cache Cargo target
+        uses: actions/cache@v3
+        with:
+          path: target
+          key: cargo-target-release-${{ hashFiles('cargo.version.txt') }}-${{ hashFiles('Cargo.toml') }}-${{ hashFiles('Cargo.lock') }}
+          restore-keys: |
+            cargo-target-release-${{ hashFiles('cargo.version.txt') }}-${{ hashFiles('Cargo.toml') }}
+            cargo-target-release-${{ hashFiles('cargo.version.txt') }}
+
       - name: Run benchmarks
         run: cargo bench --verbose
