--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
+      - name: Install cargo-llvm-cov
+        uses: taiki-e/install-action@cargo-llvm-cov
 
       - name: Create Cargo.lock file
         run: cargo generate-lockfile
@@ -18,8 +20,17 @@ jobs:
             cargo-registry-${{ hashFiles('Cargo.toml') }}
             cargo-registry
 
-      - name: Install cargo-llvm-cov
-        uses: taiki-e/install-action@cargo-llvm-cov
+      - name: Check Cargo version
+        run: cargo -V > cargo.version.txt
+      - name: Cache Cargo target
+        uses: actions/cache@v3
+        with:
+          path: target
+          key: cargo-target-coverage-${{ hashFiles('cargo.version.txt') }}-${{ hashFiles('Cargo.toml') }}-${{ hashFiles('Cargo.lock') }}
+          restore-keys: |
+            cargo-target-coverage-${{ hashFiles('cargo.version.txt') }}-${{ hashFiles('Cargo.toml') }}
+            cargo-target-coverage-${{ hashFiles('cargo.version.txt') }}
+
       - name: Generate code coverage
         run: cargo llvm-cov --release --all-features --workspace --lcov --output-path lcov.info
       - name: Upload to Codecov
