--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ rand = "0.8"
 rand_chacha = "0.3.1"
 rand_distr = "0.4"
 
+[patch.crates-io]
+num-bigint = { git = "https://github.com/gendx/num-bigint.git", branch = "feature-small-uint" }
+
 [features]
 default = ["checked_i64"]
 checked_i64 = []
