--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rust-version = "1.75.0"
 [dependencies]
 clap = { version = "=4.4", features = ["derive"] }
 env_logger = "0.10"
+jemallocator = { version = "0.5", optional = true }
 log = { version = "0.4", features = ["max_level_debug"] }
 num = "0.4"
 rayon = "1"
@@ -33,8 +34,9 @@ rand_distr = "0.4"
 num-bigint = { git = "https://github.com/gendx/num-bigint.git", branch = "feature-small-uint" }
 
 [features]
-default = []
+default = ["jemalloc"]
 checked_i64 = []
+jemalloc = ["dep:jemallocator"]
 log_parallelism = []
 
 [package.metadata.docs.rs]
