--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -82,6 +82,7 @@ jobs:
           - equal_preference/equal_preference
           - equal_preference/equal_preference_droop
           - equal_preference/equal_preference_equalize
+          - negative_surplus/below_quota
           - random/rand_2x10
           - random/rand_5x4
           - random/rand_hypergeometric
@@ -122,6 +123,34 @@ jobs:
           sed -i "s/Implementation: STV-rs/Droop package: droop v0.14/g" testdata/${{ matrix.file }}.fixed9.log
           python3 droop/Droop.py meek fixed precision=9 omega=6 defeat_batch=none testdata/${{ matrix.file }}.blt 2> droop.err | diff -s testdata/${{ matrix.file }}.fixed9.log -
           echo -n "" | diff -s - droop.err
+
+  surplus_tests:
+    needs: build
+    strategy:
+      matrix:
+        file:
+          - negative_surplus/below_quota
+        parallel:
+          - false
+          - true
+        include:
+          - file: negative_surplus/below_quota
+            output: negative_surplus/force_positive_surplus
+      fail-fast: false
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+          path: target/release/
+      - name: Prepare STV-rs binary
+        run: chmod +x target/release/stv-rs
+
+      - name: Check STV-rs output
+        run: |
+          target/release/stv-rs --arithmetic fixed9 --parallel=${{ matrix.parallel }} --force-positive-surplus --input testdata/${{ matrix.file }}.blt | diff -s testdata/${{ matrix.output }}.fixed9.log -
+
 
   numeric_tests:
     needs: build
