--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Build STV-rs
         run: cargo build --release
+      - name: Build histogram
+        run: cargo build --release --example histogram
       - name: Build remove_nicknames
         run: cargo build --release --example remove_nicknames
       - uses: actions/upload-artifact@v3
@@ -41,6 +43,7 @@ jobs:
           name: build-artifacts
           path: |
             target/release/stv-rs
+            target/release/examples/histogram
             target/release/examples/remove_nicknames
           if-no-files-found: error
 
@@ -124,6 +127,34 @@ jobs:
           python3 droop/Droop.py meek fixed precision=9 omega=6 defeat_batch=none testdata/${{ matrix.file }}.blt 2> droop.err | diff -s testdata/${{ matrix.file }}.fixed9.log -
           echo -n "" | diff -s - droop.err
 
+  histogram_tests:
+    needs: build
+    strategy:
+      matrix:
+        file:
+          - equal_preference/equal_preference
+          - random/rand_2x10
+          - random/rand_5x4
+          - random/rand_hypergeometric
+          - vegetables
+        parallel:
+          - false
+          - true
+      fail-fast: false
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+          path: target/release/
+      - name: Prepare histogram binary
+        run: chmod +x target/release/examples/histogram
+
+      - name: Check histogram output
+        run: |
+          target/release/examples/histogram < testdata/${{ matrix.file }}.blt | diff -s testdata/${{ matrix.file }}.histogram.csv -
+
   surplus_tests:
     needs: build
     strategy:
@@ -150,7 +181,6 @@ jobs:
       - name: Check STV-rs output
         run: |
           target/release/stv-rs --arithmetic fixed9 --parallel=${{ matrix.parallel }} --force-positive-surplus --input testdata/${{ matrix.file }}.blt | diff -s testdata/${{ matrix.output }}.fixed9.log -
-
 
   numeric_tests:
     needs: build
